--- a/core/latex/symbols.tex
+++ b/core/latex/symbols.tex
@@ -13,4 +13,5 @@
 
 % Chemistry
 \NewDocumentCommand{\pH}{}{\mathrm{p}\ce{H}}
+\NewDocumentCommand{\pOH}{}{\mathrm{p}\ce{OH}}
 \NewDocumentCommand{\pKa}{}{\mathrm{p}K_a}
