Better templating + tikz

--- a/core/latex/dgs.cls
+++ b/core/latex/dgs.cls
@@ -94,10 +94,10 @@
     polish,
     spanish,
     english,
-]{babel}                                      % multi-language support
+]{babel}                                                    % multi-language support
 \RequirePackage{xunicode}
-\RequirePackage[autostyle]{csquotes}                        % propr localized quotation marks
-%\RequirePackage{bidi}                                      % bidirecitonal support, keep this off unless building Parsi or Hebrew
+\RequirePackage[autostyle]{csquotes}                        % proper localized quotation marks
+%\RequirePackage{bidi}                                      % bi-directional support, keep this off unless building Parsi or Hebrew
 
 \RequirePackage[nodisplayskipstretch]{setspace}
 
