--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -2,7 +2,7 @@
     detect-all                  = true,                         % keep formatting around
     separate-uncertainty        = true,                         % 7.2 ± 0.5
     multi-part-units            = brackets,                     % 12.3 ± 0.2 kg, do not repeat "kg"
-    per-mode                    = reciprocal,                   % `symbol` for "m/s", `reciprocal` for "ms^{-1}"
+    per-mode                    = symbol,                       % `symbol` for "m/s", `reciprocal` for "ms^{-1}"
     group-separator             = {\,},
     group-minimum-digits        = 5,
     inter-unit-product          = {},                           % nothing between units
