--- a/modules/naboj/templates/blocks/booklet/footer.jinja.tex
+++ b/modules/naboj/templates/blocks/booklet/footer.jinja.tex
@@ -17,6 +17,6 @@
     (* list(i18n[language.id].people.pictures, volume.authors.pictures) *)
     (* list(i18n[language.id].people.editors, volume.authors.editors) *)
     (@ with colocolor='lightgray' @)
-        (@ include 'colophon.jtt' @)
+        (@ include 'blocks/colophon.jinja.tex' @)
     (@ endwith @)
 }
