--- a/modules/naboj/templates/blocks/tearoff/bottom.jinja.tex
+++ b/modules/naboj/templates/blocks/tearoff/bottom.jinja.tex
@@ -1,4 +1,4 @@
-(@ extends 'tearoff/problem.jtt' @)
+(@ extends 'blocks/tearoff/problem.jinja.tex' @)
 
 (@ block probnum @)0(@ endblock probnum @)
 
