--- a/modules/naboj/templates/booklet.jinja.tex
+++ b/modules/naboj/templates/booklet.jinja.tex
@@ -1,4 +1,4 @@
-(@ extends 'base-booklet.jtt' @)
+(@ extends 'base-booklet.jinja.tex' @)
 
 (@ set target = 'booklet' @)
 
@@ -19,7 +19,7 @@
         \section{(* i18n[language.id].section.problems *)}
         \pagestyle{problems}
         (@ for problem in volume.problems @)%
-            (@ include 'problem.jtt' @)%
+            (@ include 'blocks/problem.jinja.tex' @)%
         (@ endfor @)
         \newpage
     (@ endif @)
@@ -28,7 +28,7 @@
         \section{(* i18n[language.id].section.solutions *)}
         \pagestyle{solutions}
         (@ for problem in volume.problems @)%
-            (@ include 'solution.jtt' @)%
+            (@ include 'blocks/solution.jinja.tex' @)%
         (@ endfor @)
         \newpage
     (@ endif @)
@@ -37,8 +37,8 @@
         \section{(* i18n[language.id].section.answers *)}
         \pagestyle{answers}
         (@ for problem in volume.problems @)%
-            (@ include 'answer.jtt' @)%
+            (@ include 'blocks/answer.jinja.tex' @)%
         (@ endfor @)%
     (@ endif @)%
-    (@ include 'footer.jtt' @)
+    (@ include 'blocks/booklet/footer.jinja.tex' @)
 (@ endblock @)
