Converting seminar, more tests

--- a/modules/seminar/templates/problems.jinja.tex
+++ b/modules/seminar/templates/problems.jinja.tex
@@ -1,4 +1,4 @@
-(@ extends 'base-booklets.jtt' @)
+(@ extends 'base-booklets.jinja.tex' @)
 
 (@ set kind = 'problem' @)
 (@ set kind_verbose = 'zadania' @)
