--- a/modules/seminar/templates/solutions-full.jinja.tex
+++ b/modules/seminar/templates/solutions-full.jinja.tex
@@ -1,4 +1,4 @@
-(@ extends 'solutions.jtt' @)
+(@ extends 'solutions.jinja.tex' @)
 
 (@ block problem_again @)
     \protectedInput{\activeDirectory/problem.tex}%
