--- a/modules/seminar/templates/solutions.jinja.tex
+++ b/modules/seminar/templates/solutions.jinja.tex
@@ -1,4 +1,4 @@
-(@ extends 'base-booklets.jtt' @)
+(@ extends 'base-booklets.jinja.tex' @)
 
 (@ set kind = 'solution' @)
 (@ set kind_verbose = 'riešenia' @)
