--- a/modules/naboj/templates/evaluation.jinja.tex
+++ b/modules/naboj/templates/evaluation.jinja.tex
@@ -1,4 +1,4 @@
-(@ extends 'base-booklet.jinja.tex' @)
+(@ extends 'base-booklet.jtex' @)
 
 (@ block content @)
     \fancypagestyle{instructions}{%
