--- a/modules/naboj/templates/answers-modulo.jinja.tex
+++ b/modules/naboj/templates/answers-modulo.jinja.tex
@@ -1,4 +1,4 @@
-(@ extends 'base-booklet.jinja.tex' @)
+(@ extends 'base-booklet.jtex' @)
 
 (@ set target = 'answers' @)
 
@@ -16,7 +16,7 @@
         \newpage
         \section{(* i18n[language.id].section.modulo *) (* loop.index0 *)}
         (@ for problem in modulo @)
-            (@ include 'answer.jinja.tex' @)
+            (@ include 'answer.jtex' @)
         (@ endfor @)
 
     (@ endfor @)
