--- a/modules/naboj/templates/answers.jinja.tex
+++ b/modules/naboj/templates/answers.jinja.tex
@@ -1,4 +1,4 @@
-(@ extends 'base-booklet.jinja.tex' @)
+(@ extends 'base-booklet.jtex' @)
 
 (@ set target = 'answers' @)
 
@@ -6,6 +6,6 @@
     \section{(* i18n[language.id].section.answers *)}
     \pagestyle{answers}
     (@ for problem in volume.problems @)%
-        (@ include 'blocks/answer.jinja.tex' @)%
+        (@ include 'blocks/answer.jtex' @)%
     (@ endfor @)
 (@ endblock @)
