--- a/core/latex/math.tex
+++ b/core/latex/math.tex
@@ -294,6 +294,7 @@
 \NewDocumentCommand{\MSE}{m}{\mathrm{MSE}\left({#1}\right)}
 \NewDocumentCommand{\Bias}{m}{\mathrm{Bias}\left({#1}\right)}
 \NewDocumentCommand{\Binomial}{m m}{\binom{#1}{#2}}
+\NewDocumentCommand{\Dim}{m}{\left\[#1\right\]}
 
 % Text with spaces on both sides
 \NewDocumentCommand{\Text}{m}{\ \text{#1}\ }
