--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -44,6 +44,7 @@
 \DeclareSIUnit{\litre}{l}
 \DeclareSIUnit{\celsius}{\text{°}C}
 \DeclareSIUnit{\fahrenheit}{\text{°}F}
+\DeclareSIUnit{\pound}{lb}
 
 \DeclareSIUnit{\calorie}{cal}
 \DeclareSIUnit{\dyne}{dyn}
