Fixes to Makefile and log to quantities

--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -43,6 +43,7 @@
 \DeclareSIUnit{\byte}{B}
 \DeclareSIUnit{\litre}{l}
 \DeclareSIUnit{\celsius}{\text{°}C}
+\DeclareSIUnit{\dcelsius}{\text{°}C}
 \DeclareSIUnit{\fahrenheit}{\text{°}F}
 \DeclareSIUnit{\pound}{lb}
 
