Changed Earth symbol to \oplus

--- a/core/latex/symbols.tex
+++ b/core/latex/symbols.tex
@@ -2,7 +2,7 @@
 \RenewDocumentCommand{\Sun}{}{\text{\sun}}
 \NewDocumentCommand{\Mercury}{}{\text{\mercury}}
 \NewDocumentCommand{\Venus}{}{\text{\venus}}
-\NewDocumentCommand{\Earth}{}{\text{\earth}}
+\NewDocumentCommand{\Earth}{}{\oplus}
 \NewDocumentCommand{\Moon}{}{\text{\leftmoon}\!}
 \NewDocumentCommand{\Mars}{}{\text{\mars}}
 \NewDocumentCommand{\Jupiter}{}{\text{\jupiter}}
