--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -39,6 +39,7 @@
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_{\Sun}}}
 \DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_{\Sun}}}
 \DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_{\Earth}}}
+\DeclareSIUnit{\horsepower}{hp}
 
 \DeclareSIUnit{\byte}{B}
 \DeclareSIUnit{\litre}{l}
