--- a/core/i18n/sk.yaml
+++ b/core/i18n/sk.yaml
@@ -17,5 +17,6 @@ section:
   singular: 'úloha'
   plural: 'úlohy'
 siunitx:
-  andw: 'a'
   output_decimal_marker: ','
+  list_pair_separator: 'a'
+  list_final_separator: 'a'
