--- a/core/i18n/es.yaml
+++ b/core/i18n/es.yaml
@@ -4,12 +4,20 @@ locale: 'es-ES'
 quotes:
   open: '«'
   close: '»'
-figure:
-  singular: 'figura'
-  plural: 'figuras'
-table:
-  singular: 'tabla'
-  plural: 'tables'
-equation:
-  singular: 'ecuación'
-  plural: 'ecuacións'
+cref:
+  figure:
+    singular: 'figura'
+    plural: 'figuras'
+  table:
+    singular: 'tabla'
+    plural: 'tables'
+  equation:
+    singular: 'ecuación'
+    plural: 'ecuacións'
+  section:
+    singular: 'problema'
+    plural: 'problemas'
+siunitx:
+  output_decimal_marker: ','
+  list_pair_separator: 'y'
+  list_final_separator: 'y'
