--- a/core/i18n/fa.yaml
+++ b/core/i18n/fa.yaml
@@ -4,15 +4,16 @@ locale: 'en-US'
 quotes:
   open: '“'
   close: '”'
-figure:
-  singular: 'figure'
-  plural: 'figures'
-table:
-  singular: 'table'
-  plural: 'tables'
-equation:
-  singular: 'equation'
-  plural: 'equations'
-section:
-  singular: 'section'
-  plural: 'sections'
+cref:
+  figure:
+    singular: 'figure'
+    plural: 'figures'
+  table:
+    singular: 'table'
+    plural: 'tables'
+  equation:
+    singular: 'equation'
+    plural: 'equations'
+  section:
+    singular: 'section'
+    plural: 'sections'
