--- a/core/i18n/qq.yaml
+++ b/core/i18n/qq.yaml
@@ -4,12 +4,13 @@ locale: 'sk-SK'
 quotes:
   open: '('
   close: ')'
-figure:
-  singular: 'obrázok'
-  plural: 'obrázky'
-table:
-  singular: 'tabuľka'
-  plural: 'tabuľky'
-equation:
-  singular: 'rovnica'
-  plural: 'rovnice'
+cref:
+  figure:
+    singular: 'obrázok'
+    plural: 'obrázky'
+  table:
+    singular: 'tabuľka'
+    plural: 'tabuľky'
+  equation:
+    singular: 'rovnica'
+    plural: 'rovnice'
