--- a/core/i18n/cs.yaml
+++ b/core/i18n/cs.yaml
@@ -4,18 +4,20 @@ locale: 'cs-CZ'
 quotes:
   open: '„'
   close: '“'
-figure:
-  singular: 'obrázek'
-  plural: 'obrázky'
-table:
-  singular: 'tabulka'
-  plural: 'tabulky'
-equation:
-  singular: 'rovnice'
-  plural: 'rovnice'
-section:
-  singular: 'problém'
-  plural: 'problémy'
+cref:
+  figure:
+    singular: 'obrázek'
+    plural: 'obrázky'
+  table:
+    singular: 'tabulka'
+    plural: 'tabulky'
+  equation:
+    singular: 'rovnice'
+    plural: 'rovnice'
+  section:
+    singular: 'problém'
+    plural: 'problémy'
 siunitx:
-  andw: 'a'
   output_decimal_marker: ','
+  list_pair_separator: 'a'
+  list_final_separator: 'a'
