--- a/core/i18n/default.yaml
+++ b/core/i18n/default.yaml
@@ -4,18 +4,22 @@ locale: '__-__'
 quotes:
   open: '"'
   close: '"'
-figure:
-  singular: 'FIGURE'
-  plural: 'FIGURES'
-table:
-  singular: 'TABLE'
-  plural: 'TABLES'
-equation:
-  singular: 'EQUATION'
-  plural: 'EQUATIONS'
-section:
-  singular: 'PROBLEM'
-  plural: 'PROBLEMS'
+cref:
+  figure:
+    singular: 'FIGURE'
+    plural: 'FIGURES'
+  table:
+    singular: 'TABLE'
+    plural: 'TABLES'
+  equation:
+    singular: 'EQUATION'
+    plural: 'EQUATIONS'
+  section:
+    singular: 'PROBLEM'
+    plural: 'PROBLEMS'
+  listing:
+    singular: 'LISTING'
+    plural: 'LISTINGS'
 siunitx:
   output_decimal_marker: '.'
   list_pair_separator: 'AND'
