--- a/core/i18n/fr.yaml
+++ b/core/i18n/fr.yaml
@@ -4,14 +4,20 @@ locale: 'fr-FR'
 quotes:
   open: '« '
   close: ' »'
-figure:
-  singular: 'figure'
-  plural: 'figures'
-table:
-  singular: 'tableau'
-  plural: 'tableaux'
-equation:
-  singular: 'équation'
-  plural: 'équations'
+cref:
+  figure:
+    singular: 'figure'
+    plural: 'figures'
+  table:
+    singular: 'tableau'
+    plural: 'tableaux'
+  equation:
+    singular: 'équation'
+    plural: 'équations'
+  section:
+    singular: 'problème'
+    plural: 'problèmes'
 siunitx:
-  andw: 'et'
+  output_decimal_marker: ','
+  list_pair_separator: 'et'
+  list_final_separator: 'et'
