--- a/core/i18n/sk.yaml
+++ b/core/i18n/sk.yaml
@@ -4,18 +4,19 @@ locale: 'sk-SK'
 quotes:
   open: '„'
   close: '“'
-figure:
-  singular: 'obrázok'
-  plural: 'obrázky'
-table:
-  singular: 'tabuľka'
-  plural: 'tabuľky'
-equation:
-  singular: 'rovnica'
-  plural: 'rovnice'
-section:
-  singular: 'úloha'
-  plural: 'úlohy'
+cref:
+  figure:
+    singular: 'obrázok'
+    plural: 'obrázky'
+  table:
+    singular: 'tabuľka'
+    plural: 'tabuľky'
+  equation:
+    singular: 'rovnica'
+    plural: 'rovnice'
+  section:
+    singular: 'úloha'
+    plural: 'úlohy'
 siunitx:
   output_decimal_marker: ','
   list_pair_separator: 'a'
