--- a/core/i18n/de.yaml
+++ b/core/i18n/de.yaml
@@ -21,3 +21,5 @@ siunitx:
   output_decimal_marker: ','
   list_pair_separator: 'und'
   list_final_separator: 'und'
+  units:
+    horsepower: 'PS'
