Added inch and foot typeset with primes

--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -24,7 +24,9 @@
 \DeclareSIUnit{\year}{a}
 
 \DeclareSIUnit{\inch}{in}
+\DeclareSIUnit[number-unit-product={}]{\inchp}{{}^{\prime\prime}}
 \DeclareSIUnit{\foot}{ft}
+\DeclareSIUnit[number-unit-product={}]{\footp}{{}^{\prime}}
 \DeclareSIUnit{\mile}{mi}
 
 \DeclareSIUnit{\au}{au}
