Splitting, sanitized magnitude

--- a/core/latex/siunitx.tex
+++ b/core/latex/siunitx.tex
@@ -34,7 +34,7 @@
 \DeclareSIUnit{\lightyear}{ly}
 \DeclareSIUnit{\watthour}{Wh}
 \DeclareSIUnit{\jansky}{Jy}
-\DeclareSIUnit{\upmag}{\kern-0.25em\ensuremath{^\mathrm{m}}}
+\DeclareSIUnit[number-unit-product={}]{\upmag}{\ensuremath{^\mathrm{m}}}
 \DeclareSIUnit{\mag}{mag}
 \DeclareSIUnit{\rpm}{rpm}
 \DeclareSIUnit{\textarcsecond}{as}
